test/core/errors/builtin_types_error/zs/intfield0_error.zs
package intfield0_error;

struct WrongIntfield
{
    int<0>  wrong;
};
